fixing the doPostHttps method to return a map with cookies and response if the cookies are set to null, removing static cookie with this fix