@@ -42,8 +42,8 @@
                 <inherited>false</inherited>
                 <configuration>
                     <!--<argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=128m -Xmx1024m -XX:PermSize=256m-->
-                         <!---&#45;&#45;XX:MaxPermSize=512m -Xdebug -Xnoagent -Djava.compiler=NONE-->
-                         <!---&#45;&#45;Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5005 -Dhttps.protocols=TLSv1,SSLv3-->
+                         <!--XX:MaxPermSize=512m -Xdebug -Xnoagent -Djava.compiler=NONE-->
+                         <!--Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5005 -Dhttps.protocols=TLSv1,SSLv3-->
                      <!--</argLine>-->
                     <argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=128m -Dhttps.protocols=TLSv1,SSLv3</argLine>
                     <testFailureIgnore>false</testFailureIgnore>
